@@ -1,6 +1,8 @@
 2012-09-30 Guido Scholz <guido.scholz@bayernline.de>
 	* src/midiwidget.*, src/modularsynth.*: Make control center MIDI
 	settings persistent.
+	* src/m_scmcv.cpp: Fix memory leak caused by not deleted file
+	dialog.
 
 2012-02-21 Guido Scholz <guido.scholz@bayernline.de>
 	* src/modularsynth.cpp, src/port.*: Add context menu to
